--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "@stomp/stompjs": "^7.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -23,6 +24,7 @@
     "redux": "^5.0.1",
     "sass": "^1.79.4",
     "slick-carousel": "^1.8.1",
+    "stomp": "^0.1.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.4"
   },
